fix reflectDimensions show overflow if needed

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -153,18 +153,14 @@ h1 {
 
       &.section-show-overflow {
 
-        overflow: auto;
-
         .section-column-chart {
           overflow-y: auto;
           overflow-x: hidden;
         }
 
         .section-line-chart {
-          .recharts-wrapper {
-            overflow-y: hidden;
-            overflow-x: hidden;
-          }
+          overflow-y: auto;
+          overflow-x: hidden;
         }
 
         .section-bar-chart {
